--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
         "@types/socket.io": "^3.0.1",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "reflect-metadata": "^0.2.2",
         "socket.io": "^4.8.1",
