--- a/app/package.json
+++ b/app/package.json
@@ -11,10 +11,13 @@
     "author": "CryptoMonitor",
     "dependencies": {
         "@types/express": "^5.0.0",
+        "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.9.5",
         "reflect-metadata": "^0.2.2",
         "tsyringe": "^4.8.0",
         "typescript": "^5.7.3"
@@ -23,6 +26,8 @@
         "node": "22.13.1"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
+        "@types/jsonwebtoken": "^9.0.7",
         "nodemon": "^3.0.1",
         "ts-node": "^10.9.2"
     }
