--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@eslint/js": "^9.18.0",
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.7",
     "eslint": "^9.18.0",
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^15.14.0",
     "husky": "^9.1.7",
+    "lint-staged": "^15.4.2",
+    "prettier": "3.4.2",
     "semantic-release": "^24.2.1",
     "semantic-release-preconfigured-conventional-commits": "latest",
     "typescript-eslint": "^8.20.0"
@@ -24,10 +24,11 @@
   "engines": {
     "node": "22.13.1"
   },
+  "lint-staged": {
+    "app/src/**/*": "prettier --write --ignore-unknown"
+  },
   "dependencies": {
-    "@semantic-release/git": "^10.0.1",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2"
+    "@semantic-release/git": "^10.0.1"
   },
   "workspaces": [
     "app/*"
