--- a/.github/workflows/code-quality-on-pr.yml
+++ b/.github/workflows/code-quality-on-pr.yml
@@ -8,48 +8,57 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  lint:
+  lint-and-test:
     runs-on: ubuntu-latest
     permissions:
       contents: write
       pull-requests: write
 
     steps:
-      - name: Code checkout
+      - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
-      - name: Setup nodejs
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22.13'
+          node-version: 22.13.1
 
-      - name: Install dependencies
-        run: npm install
+      - name: Install Root Dependencies
+        run: npm ci
+        working-directory: .
+
+      - name: Install App Dependencies
+        run: npm ci
+        working-directory: app
 
       - name: Execute ESLint
         id: eslint
         run: npx eslint app/src/**/*.ts > eslint-report.txt || true
 
       - name: Check if ESLint report is empty
-        id: check_empty
+        id: check_empty_eslint
         run: |
           if [ ! -s eslint-report.txt ]; then
             echo "No linting issues found." > eslint-report.txt
           fi
 
-      - name: Load report ESLint
-
+      - name: Upload ESLint Report
+        if: always()
         uses: actions/upload-artifact@v4
-
         with:
           name: eslint-report
           path: eslint-report.txt
 
-      - name: Comment PR with ESLint report
+      - name: Comment PR with ESLint Report
+        if: always()
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           path: eslint-report.txt
+          header: ESLint Report
+          
 
       - name: Execute Tests
         id: test
@@ -81,4 +90,4 @@ jobs:
 
       - name: Fail if tests failed
         if: failure()
-        run: exit 1     
+        run: exit 1
