--- a/app/package.json
+++ b/app/package.json
@@ -15,13 +15,14 @@
     "dependencies": {
         "@types/express": "^5.0.0",
         "bcrypt": "^5.1.1",
-        "body-parser": "^1.20.2",
+        "body-parser": "^1.20.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.9.5",
         "reflect-metadata": "^0.2.2",
+        "sinon": "^19.0.2",
         "tsyringe": "^4.8.0",
         "typescript": "^5.7.3"
     },
@@ -31,8 +32,9 @@
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
         "@types/chai": "^5.0.1",
-        "@types/jsonwebtoken": "^9.0.7",
+        "@types/jsonwebtoken": "^9.0.8",
         "@types/mocha": "^10.0.10",
+        "@types/sinon": "^17.0.3",
         "@types/supertest": "^6.0.2",
         "chai": "^5.1.2",
         "mocha": "^11.1.0",
