--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
         "@types/express": "^5.0.0",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.3",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
@@ -32,6 +33,7 @@
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
         "@types/chai": "^5.0.1",
+        "@types/cookie-parser": "^1.4.8",
         "@types/jsonwebtoken": "^9.0.8",
         "@types/mocha": "^10.0.10",
         "@types/sinon": "^17.0.3",
