--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "author": "CryptoMonitor",
     "dependencies": {
         "@types/express": "^5.0.0",
+        "axios": "^1.7.9",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.3",
         "cookie-parser": "^1.4.7",
@@ -31,6 +32,7 @@
         "node": "22.13.1"
     },
     "devDependencies": {
+        "@types/axios": "^0.9.36",
         "@types/bcrypt": "^5.0.2",
         "@types/chai": "^5.0.1",
         "@types/cookie-parser": "^1.4.8",
