--- a/.github/workflows/docker-build-on-release.yml
+++ b/.github/workflows/docker-build-on-release.yml
@@ -40,7 +40,7 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ env.LOWERCASE_REPOSITORY }}:latest
-            ghcr.io/${{ env.LOWERCASE_REPOSITORY }}:${{ github.event.release.tag_name }}
+            ${{ github.event.release.tag_name && format('ghcr.io/{0}:{1}', env.LOWERCASE_REPOSITORY, github.event.release.tag_name) }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64
